# stmemu

./: .gitignore  README.MD  pyproject.toml
src/stmemu/: __main__.py  app.py  board_config.py
src/stmemu/core/: armv8m_fp.py  disasm.py  emulator.py  exceptions.py  loader.py  profiler.py  semihosting.py  stall_analyzer.py  symbols.py  time_engine.py  types.py
src/stmemu/fuzz/: engine.py  injector.py  mutator.py  profile.py
src/stmemu/peripherals/: adc.py  bus.py  core_cm.py  dma.py  dmamux.py  exti.py  factory.py  flash.py  generic.py  gpio.py  i2c.py  memory.py  rcc.py  registers.py  sdmmc.py  spi.py  timer.py  tracer.py  usart.py  usb_otg.py
src/stmemu/shell/: commands.py  format.py  shell.py
src/stmemu/svd/: address_map.py  model.py  svd_loader.py
src/stmemu/utils/: bits.py  hexdump.py  logger.py
test/: Pixhawk6C_bl.elf  Pixhawk6C_bl_smoke.yaml  arducopter.elf  arducopter_with_bl.yaml  diag_cal.py  diag_cal2.py  diag_cb.py  diag_delay.py  diag_disasm.py  diag_dma_stall.py  diag_ekf_imutime.py  diag_fram.py  diag_gap.py  diag_glitch.py  diag_gpio.py  diag_gps.py  diag_gps_reach.py  diag_gps_reach5.py  diag_gps_reach6.py  diag_gps_reach7.py  diag_gps_verify.py  diag_i2c.py  diag_idle_accel.py  diag_initstall.py  diag_jumps.py  diag_notify.py  diag_numgyro.py  diag_profile.py  diag_rate.py  diag_skipcal.py  diag_spi.py  diag_stack.py  diag_stall_trace.py  diag_tick.py  diag_tim2.py  diag_timeval.py  diag_ublox_check.py  diag_xfer.py  elf_symbols.py  firmware_harness.py  (+43 more)
