[project]
name = "stmemu"
version = "0.1.0"
description = "STM device emulator skeleton with Unicorn + CMSIS-SVD MMIO mapping + interactive shell"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "unicorn>=2.0.1",
  "capstone>=5.0.1",
]

[project.scripts]
stmemu = "stmemu.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
